--- a/index.html
+++ b/index.html
@@ -2,9 +2,37 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>HM1</title>
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<p>I must do that</p>
+    
+	<div class="wrapper">
+	       <h1>Тимошенко Дмитрий Сергеевич</h1>
+ 	       <img src="img/img1.jpg">
+ 	       <p>Помогаю с трудоустройством в ЕС</p>
+ 	    
+ 	    <hr>
+	        <div class="Article">
+ 	          <h2>Хочу учить Фронтенд по тому что:</h2>
+ 	            <ul>
+ 	          	  <li>Перспективная сфера</li>
+ 	          	  <li>Зарплата в долларах</li>
+ 	          	  <li>Возможность работы удаленно</li>
+ 	            </ul>
+ 	        </div>
+ 	    <hr>
+ 	        <div class="contacts">
+ 	          <h2>Мой контактный телефон:</h2>
+ 	          <p>+380636236985</p>
+ 	          <h2>Мой профиль вконтакте:</h2>
+ 	          <a href="http://vk.com/whazup">vk.com/whazup</a>
+ 	        </div>
+        <hr>
+            <div class="feedback">
+              <h2>Мой фидбек:</h2>
+              <p>Учитесь пока молодые</p>
+            </div>
+    </div>        
 </body>
 </html>
