--- a/HM3/index.html
+++ b/HM3/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
    <div class="wrapper">
-         <img src="img/Logo.png">
+         <img src="img/Logo.png" alt="#">
         <div class="menu">
         	<ul>
         		<li><a href="#">Главная</a></li>
@@ -28,7 +28,7 @@
          	</ul>
          </div>
          <div class="img">
-            <img src="img/02.png">  	
+            <img src="img/02.png" alt="#">  	
          </div>
          <div class="text">
          	<p>Lorem Ipsum - це текст-"риба", що використовується в друкарстві та дизайні. Lorem Ipsum є, фактично, стандартною "рибою" аж з XVI сторіччя, коли невідомий друкар взяв шрифтову гранку та склав на ній підбірку зразків шрифтів. "Риба" не тільки успішно пережила п'ять століть, але й прижилася в електронному верстуванні, залишаючись по суті незмінною. Вона популяризувалась в 60-их роках минулого сторіччя завдяки виданню зразків шрифтів Letraset, які містили уривки з Lorem Ipsum, і вдруге - нещодавно завдяки програмам комп'ютерного верстування на кшталт Aldus Pagemaker, які використовували різні версії Lorem Ipsum.</p>
