--- a/HM3/index.html
+++ b/HM3/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
    <div class="wrapper">
-         <img src="img/Logo.png" alt="#">
+        <div class="logo">
+          <img src="img/Logo.png" alt="#">
+        </div>
         <div class="menu">
         	<ul>
         		<li><a href="#">Главная</a></li>
