--- a/HM3/index.html
+++ b/HM3/index.html
@@ -41,7 +41,7 @@
             	<li><a href="#">Товары</a></li>
             	<li><a href="#">О_нас</a></li>
                 <li><a href="#">Контакты</a></li>
-                <li><a href="#">2014 &copy; All right server</a></li>
+                <li>2014 &copy; All right server</li>
             </ul>	
          </div>
    	</div>
