--- a/HM4/index.html
+++ b/HM4/index.html
@@ -36,8 +36,8 @@
 	  <div class="picture">
 	  	<img src="img/img.png">
 	  </div>
-	  <div>
-	  	<ul class="menu clearfix">
+	  <div class="one">
+	  	<ul class="topmenu clearfix">
         <li><a href=#>Главная</a></li>
         <li><a href=#>Путешествие</a>
           <ul class="submenu">
